src/objects/Branch_Region__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <externalId>true</externalId>
        <label>Branch Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Level__c</fullName>
        <label>Branch Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Manager</label>
        <referenceTo>Employees__c</referenceTo>
        <relationshipLabel>Branches / Regions</relationshipLabel>
        <relationshipName>Branches_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Branch_Region__c</referenceTo>
        <relationshipLabel>Branches / Regions</relationshipLabel>
        <relationshipName>Branches_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch / Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Branch / Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches / Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>